# Cloud-Federated-learning

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
federated_learning_cloud/: dataset.py  features.py  plots.py
federated_learning_cloud/modeling/: predict.py  train.py
