[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "federated_learning_cloud"
version = "0.0.1"
description = "This project is a demonstartions of federated learning potential applied to classical machine learning tasks"
authors = [
  { name = "Uniparthenope" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["federated_learning_cloud"]
force_sort_within_sections = true
